--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: Hank Quinlan, Horrible Cop
-markdown: kramdown
-kramdown:
- input: GFM
- highlighter: rouge
+markdown: redcarpet
+markdown_ext:  markdown,mkdown,mkdn,mkd,md
+redcarpet:
+  extensions: ["tables", "autolink", "strikethrough", "space_after_headers", "with_toc_data", "fenced_code_blocks"]
 permalink: /blog/:year/:month/:day/:title
