--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 name: Hank Quinlan, Horrible Cop
-markdown: kramdown
-kramdown:
- input: GFM
+markdown: redcarpet
+markdown_ext: markdown,mkdown,mkdn,mkd,md
+redcarpet:
+ extensions: ["tables", "autolink", "strikethrough", "space_after_headers", "with_toc_data", "fenced_code_blocks"]
+highlighter: pygments
 permalink: /blog/:year/:month/:day/:title
