--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Hank Quinlan, Horrible Cop
-markdown: redcarpet
+markdown: redcarpet2
 markdown_ext: markdown,mkdown,mkdn,mkd,md
 redcarpet:
  extensions: ["tables", "autolink", "strikethrough", "space_after_headers", "with_toc_data", "fenced_code_blocks"]
