--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 name: Hank Quinlan, Horrible Cop
-markdown: redcarpet2
+markdown: redcarpet
 markdown_ext: markdown,mkdown,mkdn,mkd,md
-redcarpet2:
- extensions: ["tables", "autolink", "strikethrough", "space_after_headers", "with_toc_data", "fenced_code_blocks"]
 highlighter: pygments
+redcarpet:
+ extensions: ["tables", "autolink", "strikethrough", "space_after_headers", "with_toc_data", "fenced_code_blocks"]
 permalink: /blog/:year/:month/:day/:title
