--- a/_config.yml
+++ b/_config.yml
@@ -24,4 +24,11 @@ baseurl:          /
 author:
   name:           Riccardo V. Vincelli
   email:          ReimOne@Gmail.com
+  github: 	  rvvincelli
+  twitter: 	  rvvincelli
+  linkedin: 	  riccardo-vincenzo-vincelli
+  facebook: 	  riccardo.vincelli
+  scribd: 	  riccardo_vincelli
+  youtube: 	  reimuno
+
 
